[bdist_wheel]
universal=1

[metadata]
license_file = LICENSE

[pep8]
max-line-length = 120

[flake8]
max-line-length = 120
exclude = docs, benchmarks, notebooks, tools
per-file-ignores =
    __init__.py: F401
    functorch/_src/decompositions.py: E501

[pydocstyle]
select = D417 # Missing argument descriptions in the docstring
